# BreezeTui

./: Cargo.toml
.github/workflows/: release.yml
breeze-pack/: Cargo.toml
breeze-pack/src/: format.rs  lib.rs  packer.rs
src/: config.rs  edit_mod.rs  edit_modpack.rs  installations.rs  main.rs  modpacks.rs  modpacks_list.rs  mods.rs  utils.rs
src/components/: button.rs  container.rs  flexbox.rs  mod.rs  mod_entry.rs
src/modpacks/: format.rs  mod.rs  packer.rs
src/pages/: add_branch.rs  branch_list.rs  create_modpack.rs  edit_mod.rs  edit_modpack.rs  home.rs  manage_branch.rs  manage_modpack.rs  mod.rs  modpacks.rs  modpacks_list.rs  mods.rs  mods_list.rs
src/utils/: archive.rs  minecraft_versions.rs  mod.rs  paths.rs
src/views/: app.rs  home.rs  mod.rs  mods.rs
