[package]
name = "breeze_gui"
version = "1.2.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
libium = { git = "https://github.com/gorilla-devs/libium", version = "1.32.0" }
open = "5.3.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.12"
