[package]
name = "breeze_gui"
version = "1.4.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
libium = { git = "https://github.com/gorilla-devs/libium", version = "1.32.0" }
open = "5.3.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.12"
sevenz-rust = "0.6.1"
rfd = "0.15.2"
clearscreen = "4.0.6"
console = "0.16.3"
strum = "0.28.0"
strum_macros = "0.28.0"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-sys = { version = "0.31.6", features = ["dlopen"] }
