[workspace]
resolver = "3"
members = ["breeze-pack"]

[workspace.dependencies]
anyhow = "1.0.102"
console = "0.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"

[package]
name = "breeze_tui"
version = "1.4.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
console.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
# libium = { git = "https://github.com/gorilla-devs/libium", version = "1.32.0" }
open = "5.3.1"
tokio = { version = "1.52.3", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.13.3", features = ["json"] }
rfd = "0.15.2"
clearscreen = "4.0.6"
home = "0.5.12"
zip = "8.6.0"
regex = "1.12.3"
breeze_pack = { path = "./breeze-pack" }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-sys = { version = "0.31.6", features = ["dlopen"] }
