[package]
name = "breeze_pack"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4"] }
console = "0.16.3"
strum = "0.28.0"
strum_macros = "0.28.0"
anyhow = "1.0.102"
sevenz-rust = "0.6.1"
